# rpg1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app.bff  cmake_install.cmake  fbuild.bff  fbuild.linux.fdb  game  game.cpp  histogram  linuxcompiler.bff  notes
inc/: action.h  die.h  enemy.h  player.h
src/: action.cpp  die.cpp  enemy.cpp  player.cpp
